--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h5>Современные технологии</h5>
         <p> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         <h2>Чем мы занимаемся</h2>
-        <img src="/images/img.png" alt="img" width="370" height="294">
+        <img src="images/img (1).png" alt="img" width="370" height="294">
         <img src="/images/img (1).png" alt="img" width="370" height="294">
         <img src="/images/img (2).png" alt="img" width="370" height="294">
         <h2>
