--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
         <p> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         <h2>Чем мы занимаемся</h2>
         <img src="images/img (1).png" alt="img" width="370" height="294">
-        <img src="/images/img (1).png" alt="img" width="370" height="294">
-        <img src="/images/img (2).png" alt="img" width="370" height="294">
+        <img src="images/img (2).png" alt="img" width="370" height="294">
+        <img src="images/img.png" alt="img" width="370" height="294">
         <h2>
             Наша команда
         </h2>
-        <img src="/images/img (4).jpg" alt="img" width="270" height="260">
+        <img src="images/img (4).jpg" alt="img" width="270" height="260">
         <p>Игорь Демьяненко</p>
         <p>Product Designer</p>
-        <img src="/images/img (3).jpg" alt="img" width="270" height="260">
+        <img src="images/img (3).jpg" alt="img" width="270" height="260">
 <p>Ольга Репина</p>
 <p>Frontend Developer</p>
-        <img src="/images/img (2).jpg" alt="img" width="270" height="260">
+        <img src="images/img (2).jpg" alt="img" width="270" height="260">
 <p>Николай Тарасов</p>
 <p>Marketing</p>
-        <img src="/images/img.jpg" alt="img" width="270" height="260">
+        <img src="images/img.jpg" alt="img" width="270" height="260">
         <p>Михаил Ермаков</p>
         <p>UI Designer</p>
     </main>
